--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==0.87.0
-matplotlib==3.5.3
-pandas==1.5.2
-scipy==1.10.0
+streamlit==1.16.0
+pandas==1.4.3
 plotly==5.11.0
+numpy==1.23.0
+statsmodels==ß.13.0
